# pdf-text-refiner

./: .env.example  .gitignore  CLAUDE.md  CONFIGURACION_OLLAMA.md  README.md  fix_languagetool_cache.sh  instalar_ollama.sh  main.py  pdf_analyzer.py  pyproject.toml  requirements.txt  test_mistral.txt  test_ollama_connection.py
scripts/legacy/: pdf_analyzer.py
src/: __init__.py  config.py  formatters.py  utils.py
src/checkers/: __init__.py  languagetool.py  ollama.py
src/pdf/: __init__.py  extractor.py
